--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" data-bs-theme="dark">
     <head>
         <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="viewport" content="width=device-width,initial-scale=1.0" />
         <meta name="description" content="Otávio Bambans' personal web page." />
         <meta
             name="keywords"
@@ -13,41 +13,29 @@
         <meta name="language" content="Portuguese" />
         <meta name="color-scheme" content="dark" />
         <title>@bambans</title>
-
-        <!-- Favicon -->
         <link rel="icon" href="img/otavio.ico" type="image/x-icon" />
-
-        <!-- Image link for social sharing -->
         <link rel="image_src" href="img/otavio-pixel-sem-bg.png" />
-
-        <!-- Modern Normalize CSS -->
         <link
             rel="stylesheet"
             href="https://cdn.jsdelivr.net/npm/modern-normalize@3.0.1/modern-normalize.min.css"
         />
-
-        <!-- Bootstrap CSS -->
         <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
             rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
             integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
             crossorigin="anonymous"
         />
-
-        <!-- Custom CSS -->
         <link rel="stylesheet" href="css/main.css" />
     </head>
     <body>
         <div class="container-fluid">
             <div class="row justify-content-center">
                 <div class="col-lg-8 col-md-10 col-sm-12">
-                    <!-- Header Section -->
-                    <header class="text-center mb-5" role="banner">
+                    <header class="text-center mb-5">
                         <img
                             src="img/otavio-pixel-sem-bg.png"
                             alt="Otávio Rodrigues Bambans"
                             class="profile-image mb-4"
-                            loading="eager"
                         />
                         <h1 class="display-4 mb-3">Otavio Bambans</h1>
                         <p class="lead">
@@ -56,8 +44,7 @@
                                 href="https://etecitanhaem.cps.sp.gov.br/"
                                 target="_blank"
                                 >Etec de Itanhaém</a
-                            >, Computer Information Systems bachelor's degree
-                            student at
+                            >, Computer Information Systems student at
                             <a
                                 href="https://www5.each.usp.br/bacharelado-em-sistemas-de-informacao/"
                                 target="_blank"
@@ -71,15 +58,11 @@
                             >
                         </p>
                     </header>
-
-                    <!-- Main Content -->
-                    <main role="main" id="main">
+                    <main id="main">
                         <div class="row g-4">
-                            <!-- Contact Card -->
                             <div class="col-md-6">
                                 <div
                                     class="info-card h-100"
-                                    role="region"
                                     aria-labelledby="contact-heading"
                                 >
                                     <div class="card-header">
@@ -92,35 +75,26 @@
                                         </h2>
                                     </div>
                                     <div class="card-body">
-                                        <ul class="link-list" role="list">
+                                        <ul class="link-list">
                                             <li>
                                                 <a
                                                     href="mailto:otavio@bambans.top"
-                                                    class="contact-link"
-                                                    aria-label="Send email to Otavio Bambans"
+                                                    >otavio@bambans.top</a
                                                 >
-                                                    otavio@bambans.top
-                                                </a>
                                             </li>
                                             <li>
-                                                <a
-                                                    href="tel:+5513982052585"
-                                                    class="contact-link"
-                                                    aria-label="Call or message to Otavio Bambans"
+                                                <a href="tel:+5513982052585"
+                                                    >+55 (13) 98205-2585</a
                                                 >
-                                                    +55 (13) 98205-2585
-                                                </a>
                                             </li>
                                         </ul>
                                     </div>
                                 </div>
                             </div>
 
-                            <!-- Projects Card -->
                             <div class="col-md-6">
                                 <div
                                     class="info-card h-100"
-                                    role="region"
                                     aria-labelledby="projects-heading"
                                 >
                                     <div class="card-header">
@@ -133,37 +107,31 @@
                                         </h2>
                                     </div>
                                     <div class="card-body">
-                                        <ul class="link-list" role="list">
+                                        <ul class="link-list">
                                             <li>
                                                 <a
                                                     href="https://rocksing.com.br/"
                                                     target="_blank"
                                                     rel="noopener noreferrer"
-                                                    class="project-link"
+                                                    >RockSing</a
                                                 >
-                                                    RockSing
-                                                </a>
                                             </li>
                                             <li>
                                                 <a
                                                     href="https://unduo.com.br/"
                                                     target="_blank"
                                                     rel="noopener noreferrer"
-                                                    class="project-link"
+                                                    >UNDUO</a
                                                 >
-                                                    UNDUO
-                                                </a>
                                             </li>
                                         </ul>
                                     </div>
                                 </div>
                             </div>
 
-                            <!-- Social Media Card -->
                             <div class="col-md-6">
                                 <div
                                     class="info-card h-100"
-                                    role="region"
                                     aria-labelledby="social-heading"
                                 >
                                     <div class="card-header">
@@ -178,66 +146,50 @@
                                     <div class="card-body">
                                         <div class="row">
                                             <div class="col-6">
-                                                <ul
-                                                    class="link-list"
-                                                    role="list"
-                                                >
+                                                <ul class="link-list">
                                                     <li>
                                                         <a
                                                             href="https://github.com/bambans/"
                                                             target="_blank"
                                                             rel="noopener noreferrer"
-                                                            class="social-link"
+                                                            >GitHub</a
                                                         >
-                                                            GitHub
-                                                        </a>
                                                     </li>
                                                     <li>
                                                         <a
                                                             href="https://www.linkedin.com/in/bambans/"
                                                             target="_blank"
                                                             rel="noopener noreferrer"
-                                                            class="social-link"
+                                                            >LinkedIn</a
                                                         >
-                                                            LinkedIn
-                                                        </a>
                                                     </li>
                                                     <li>
                                                         <a
                                                             href="https://www.instagram.com/otavio_bambans/"
                                                             target="_blank"
                                                             rel="noopener noreferrer"
-                                                            class="social-link"
+                                                            >Instagram</a
                                                         >
-                                                            Instagram
-                                                        </a>
                                                     </li>
                                                 </ul>
                                             </div>
                                             <div class="col-6">
-                                                <ul
-                                                    class="link-list"
-                                                    role="list"
-                                                >
+                                                <ul class="link-list">
                                                     <li>
                                                         <a
                                                             href="https://www.facebook.com/otavio.rodrigues.bambans"
                                                             target="_blank"
                                                             rel="noopener noreferrer"
-                                                            class="social-link"
+                                                            >Facebook</a
                                                         >
-                                                            Facebook
-                                                        </a>
                                                     </li>
                                                     <li>
                                                         <a
                                                             href="http://lattes.cnpq.br/9571686392212007"
                                                             target="_blank"
                                                             rel="noopener noreferrer"
-                                                            class="social-link"
+                                                            >Lattes</a
                                                         >
-                                                            Lattes
-                                                        </a>
                                                     </li>
                                                 </ul>
                                             </div>
@@ -246,11 +198,9 @@
                                 </div>
                             </div>
 
-                            <!-- Blog Card -->
                             <div class="col-md-6">
                                 <div
                                     class="info-card h-100"
-                                    role="region"
                                     aria-labelledby="blog-heading"
                                 >
                                     <div class="card-header">
@@ -262,16 +212,15 @@
                                         </h2>
                                     </div>
                                     <div class="card-body">
-                                        <p class="card-text">
-                                            <a
-                                                href="https://naufragodoespaco.com.br"
-                                                target="_blank"
-                                                class="blog-link"
-                                                aria-label="Visit Otavio's blog"
-                                            >
-                                                Náufrago do Espaço
-                                            </a>
-                                        </p>
+                                        <ul class="link-list">
+                                            <li>
+                                                <a
+                                                    href="https://naufragodoespaco.com.br"
+                                                    target="_blank"
+                                                    >Náufrago do Espaço</a
+                                                >
+                                            </li>
+                                        </ul>
                                     </div>
                                 </div>
                             </div>
@@ -280,18 +229,14 @@
                 </div>
             </div>
         </div>
-
-        <!-- Bootstrap JS (deferred) -->
+        <footer class="footer mt-5 py-3 text-center text-light w-100">
+            Made with love by me <span aria-label="love" role="img">❤️</span>
+        </footer>
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
             crossorigin="anonymous"
             defer
         ></script>
-        <footer class="footer mt-5 py-3 text-center text-light w-100">
-            Made with love by me <span aria-label="love" role="img">❤️</span>
-        </footer>
-        <!-- Custom JS (deferred) -->
-        <script src="js/main.js" defer></script>
     </body>
 </html>
