--- a/index.html
+++ b/index.html
@@ -191,6 +191,14 @@
                                                             >Lattes</a
                                                         >
                                                     </li>
+                                                    <li>
+                                                        <a
+                                                            href="https://open.spotify.com/user/22jsqt7ggfdddpkrkhvqawoni?si=5bea7bc7ba8b49c2"
+                                                            target="_blank"
+                                                            rel="noopener noreferrer"
+                                                            >Spotify</a
+                                                        >
+                                                    </li>
                                                 </ul>
                                             </div>
                                         </div>
