Refactor profile description in index.html
Add BSc CIS USP

--- a/index.html
+++ b/index.html
@@ -39,23 +39,23 @@
                         />
                         <h1 class="display-4 mb-3">Otavio Bambans</h1>
                         <p class="lead">
-                            Information Systems technician by
-                            <a
+                            Information Systems technician 
+                            (<a
                                 href="https://etecitanhaem.cps.sp.gov.br/"
                                 target="_blank"
                                 >Etec de Itanhaém</a
-                            >, Computer Information Systems student at
-                            <a
+                            >), BSc in Computer Information Systems (
+                            (<a
                                 href="https://www5.each.usp.br/bacharelado-em-sistemas-de-informacao/"
                                 target="_blank"
                                 >EACH/USP</a
-                            >
-                            and HPC Solutions Architect at
-                            <a
+                            >)
+                            and HPC Solutions Architect 
+                            (<a
                                 href="https://versatushpc.com.br/"
                                 target="_blank"
                                 >Versatus HPC</a
-                            >
+                            >)
                         </p>
                     </header>
                     <main id="main">
