Fix HTML formatting in index.html

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                                 href="https://etecitanhaem.cps.sp.gov.br/"
                                 target="_blank"
                                 >Etec de Itanhaém</a
-                            >), BSc in Computer Information Systems (
+                            >), BSc in Computer Information Systems 
                             (<a
                                 href="https://www5.each.usp.br/bacharelado-em-sistemas-de-informacao/"
                                 target="_blank"
