Update footer text for consistency

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
             </div>
         </div>
         <footer class="footer mt-5 py-3 text-center text-light w-100">
-            Made with love by me <span aria-label="love" role="img">❤️</span>
+            Made with <span aria-label="love" role="img">❤️</span> by me
         </footer>
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
