Update email links with personal and academic labels

--- a/index.html
+++ b/index.html
@@ -79,7 +79,13 @@
                                             <li>
                                                 <a
                                                     href="mailto:otavio@bambans.top"
-                                                    >otavio@bambans.top</a
+                                                    >(personal) otavio@bambans.top</a
+                                                >
+                                            </li>
+                                            <li>
+                                                <a
+                                                    href="mailto:otavio.bambans@alumni.usp.br"
+                                                    >(academics) otavio.bambans@alumni.usp.br</a
                                                 >
                                             </li>
                                             <li>
