Update meta keywords and contact information

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="Otávio Bambans' personal web page." />
         <meta
             name="keywords"
-            content="programming, html, css, js, python, c, c++, projects, apps"
+            content="computer science, HPC, AI/ML, music, poetry, science"
         />
         <meta name="author" content="Otávio Rodrigues Bambans" />
         <meta name="robots" content="index, follow" />
@@ -79,13 +79,7 @@
                                             <li>
                                                 <a
                                                     href="mailto:otavio@bambans.top"
-                                                    >(personal) otavio@bambans.top</a
-                                                >
-                                            </li>
-                                            <li>
-                                                <a
-                                                    href="mailto:otavio.bambans@alumni.usp.br"
-                                                    >(academics) otavio.bambans@alumni.usp.br</a
+                                                    >otavio@bambans.top</a
                                                 >
                                             </li>
                                             <li>
