Update social media links in index.html

--- a/index.html
+++ b/index.html
@@ -139,14 +139,43 @@
                                             id="social-heading"
                                             class="card-title"
                                         >
-                                            <span class="prompt">></span> Social
-                                            Media
+                                            <span class="prompt">></span> Media
                                         </h2>
                                     </div>
                                     <div class="card-body">
                                         <div class="row">
                                             <div class="col-6">
                                                 <ul class="link-list">
+                                                    <li>Personal:</li>
+                                                    <li>
+                                                        <a
+                                                            href="https://www.facebook.com/otavio.rodrigues.bambans"
+                                                            target="_blank"
+                                                            rel="noopener noreferrer"
+                                                            >Facebook</a
+                                                        >
+                                                    </li>
+                                                    <li>
+                                                        <a
+                                                            href="https://www.instagram.com/otavio_bambans/"
+                                                            target="_blank"
+                                                            rel="noopener noreferrer"
+                                                            >Instagram</a
+                                                        >
+                                                    </li>
+                                                    <li>
+                                                        <a
+                                                            href="https://open.spotify.com/user/22jsqt7ggfdddpkrkhvqawoni?si=5bea7bc7ba8b49c2"
+                                                            target="_blank"
+                                                            rel="noopener noreferrer"
+                                                            >Spotify</a
+                                                        >
+                                                    </li>
+                                                </ul>
+                                            </div>
+                                            <div class="col-6">
+                                                <ul class="link-list">
+                                                    <li>Professional:</li>
                                                     <li>
                                                         <a
                                                             href="https://github.com/bambans/"
@@ -165,26 +194,6 @@
                                                     </li>
                                                     <li>
                                                         <a
-                                                            href="https://www.instagram.com/otavio_bambans/"
-                                                            target="_blank"
-                                                            rel="noopener noreferrer"
-                                                            >Instagram</a
-                                                        >
-                                                    </li>
-                                                </ul>
-                                            </div>
-                                            <div class="col-6">
-                                                <ul class="link-list">
-                                                    <li>
-                                                        <a
-                                                            href="https://www.facebook.com/otavio.rodrigues.bambans"
-                                                            target="_blank"
-                                                            rel="noopener noreferrer"
-                                                            >Facebook</a
-                                                        >
-                                                    </li>
-                                                    <li>
-                                                        <a
                                                             href="http://lattes.cnpq.br/9571686392212007"
                                                             target="_blank"
                                                             rel="noopener noreferrer"
@@ -193,10 +202,10 @@
                                                     </li>
                                                     <li>
                                                         <a
-                                                            href="https://open.spotify.com/user/22jsqt7ggfdddpkrkhvqawoni?si=5bea7bc7ba8b49c2"
+                                                            href="https://orcid.org/0000-0002-9994-8138"
                                                             target="_blank"
                                                             rel="noopener noreferrer"
-                                                            >Spotify</a
+                                                            >ORCID</a
                                                         >
                                                     </li>
                                                 </ul>
