Update profile description and titles

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         />
                         <h1 class="display-4 mb-3">Otavio Bambans</h1>
                         <p class="lead">
-                            Information Systems technician 
+                            Musician, Technical IT Professional for the Internet 
                             (<a
                                 href="https://etecitanhaem.cps.sp.gov.br/"
                                 target="_blank"
@@ -50,7 +50,7 @@
                                 target="_blank"
                                 >EACH/USP</a
                             >)
-                            and HPC Solutions Architect 
+                            and Solutions Architect (HPC & AI/ML) 
                             (<a
                                 href="https://versatushpc.com.br/"
                                 target="_blank"
