Update name from 'Otavio Bambans' to 'Otávio R. Bambans'

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                             alt="Otávio Rodrigues Bambans"
                             class="profile-image mb-4"
                         />
-                        <h1 class="display-4 mb-3">Otavio Bambans</h1>
+                        <h1 class="display-4 mb-3">Otávio R. Bambans</h1>
                         <p class="lead">
                             Musician, Technical IT Professional for the Internet 
                             (<a
