Add personal and academic contact information
Added personal and academic contact information sections.

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
                                     </div>
                                     <div class="card-body">
                                         <ul class="link-list">
+                                            <li>Personal:</li>
                                             <li>
                                                 <a
                                                     href="mailto:otavio@bambans.top"
@@ -85,6 +86,15 @@
                                             <li>
                                                 <a href="tel:+5513982052585"
                                                     >+55 (13) 98205-2585</a
+                                                >
+                                            </li>
+                                        </ul>
+                                        <ul class="link-list">
+                                            <li>Academic:</li>
+                                            <li>
+                                                <a
+                                                    href="mailto:otavio.bambans@alumni.usp.br"
+                                                    >otavio.bambans@alumni.usp.br</a
                                                 >
                                             </li>
                                         </ul>
