Add green hosting verification image in footer
Added a green hosting verification image to the footer.

--- a/index.html
+++ b/index.html
@@ -257,6 +257,8 @@
             </div>
         </div>
         <footer class="footer mt-5 py-3 text-center text-light w-100">
+            <img src="https://app.greenweb.org/api/v3/greencheckimage/bambans.top?nocache=true" alt="This website runs on green hosting - verified by thegreenwebfoundation.org" width="200px" height="95px">
+            </br>
             Made with <span aria-label="love" role="img">❤️</span> by me
         </footer>
         <script
