--- a/index.html
+++ b/index.html
@@ -257,9 +257,12 @@
             </div>
         </div>
         <footer class="footer mt-5 py-3 text-center text-light w-100">
-            <img src="https://app.greenweb.org/api/v3/greencheckimage/bambans.top?nocache=true" alt="This website runs on green hosting - verified by thegreenwebfoundation.org" width="200px" height="95px">
-            </br>
-            Made with <span aria-label="love" role="img">❤️</span> by me
+            <div>
+                <img src="https://app.greenweb.org/api/v3/greencheckimage/bambans.top?nocache=true" alt="This website runs on green hosting - verified by thegreenwebfoundation.org" width="200px" height="95px">
+            </div>
+            <p>
+                Made with <span aria-label="love" role="img">❤️</span> by me
+            </p>
         </footer>
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
