--- a/index.html
+++ b/index.html
@@ -113,11 +113,37 @@
                                             class="card-title"
                                         >
                                             <span class="prompt">></span>
-                                            Projects
+                                            Curriculum
                                         </h2>
                                     </div>
                                     <div class="card-body">
                                         <ul class="link-list">
+                                            <li>Profesional | Academic: (PDF)</li>
+                                            <li>
+                                                <a
+                                                    href="https://drive.google.com/file/d/1UskCDrwF9MOo1JNRqzpr8-Q6pup-sUvG/view?usp=share_link"
+                                                    target="_blank"
+                                                    rel="noopener noreferrer"
+                                                    >Curriculum Vitae in English</a
+                                                >
+                                            </li>
+                                            <li>
+                                                <a
+                                                    href="https://drive.google.com/file/d/17Y1cAPps5RFV9p3c24jp6knCX7I3A7pn/view?usp=share_link"
+                                                    target="_blank"
+                                                    rel="noopener noreferrer"
+                                                    >Curriculum Vitae in Portuguese</a
+                                                >
+                                            </li>
+                                            <li>
+                                                <a
+                                                    href="https://drive.google.com/file/d/1x_ojT2_G1wy6Pz-y9FW6TyLzPmG3LrSW/view?usp=share_link"
+                                                    target="_blank"
+                                                    rel="noopener noreferrer"
+                                                    >Curriculum Vitae in Spanish</a
+                                                >
+                                            </li>
+                                            <li>Musical projects:</li>
                                             <li>
                                                 <a
                                                     href="https://rocksing.com.br/"
