Fix formatting in index.html

--- a/index.html
+++ b/index.html
@@ -143,6 +143,8 @@
                                                     >Curriculum Vitae in Spanish</a
                                                 >
                                             </li>
+                                        </ul>
+                                        <ul class="link-list">
                                             <li>Musical projects:</li>
                                             <li>
                                                 <a
